Fixed missalignment on the top buttons

--- a/Src/Resources/KtaneWeb.css
+++ b/Src/Resources/KtaneWeb.css
@@ -815,7 +815,6 @@ div.popup {
 
             .icons .icon > .icon-link > .icon-label {
                 display: block;
-                width: 5em;
             }
 
 ul.below-icons {
